devops/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mysite.com
    http:
      paths:
      - backend:
          serviceName: student-service
          servicePort: 7000
        path: /student
      - backend:
          serviceName: rating-service
          servicePort: 5000
        path: /rating
